--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -74,6 +74,11 @@ details {
 
 /* Content layout assistants */
 
+.content-center {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .content-full-column {
   max-width: 80vw;
   margin-left: auto;
@@ -134,6 +139,12 @@ details {
   }
 }
 
+.container-two-columns {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  width: 100%
+}
+
 .container-two-columns-lefthanded {
   display: grid;
   grid-template-columns: 5fr 1fr;
@@ -146,6 +157,7 @@ details {
   width: 100%;
 }
 
+.container-two-columns > div,
 .container-three-columns > div,
 .container-two-columns-lefthanded > div {
   align-self: stretch;
@@ -153,6 +165,8 @@ details {
 }
 
 @media (max-width: 1000px){
+  
+  .container-two-columns,
   .container-three-columns{
       grid-template-columns: 1fr;
   }
